CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2 FATAL_ERROR)

PROJECT(LUA_READONLY_TABLE)

set(CMAKE_EXPORT_COMPILE_COMMANDS YES)

SET(CMAKE_CXX_STANDARD 14)

if (NOT CMAKE_BUILD_TYPE)
  MESSAGE(WARNING "CMAKE_BUILD_TYPE is empty. CMAKE_BUILD_TYPE is set to Debug.")
  set(CMAKE_BUILD_TYPE Debug)
endif() 

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -fsanitize=undefined")

CONFIGURE_FILE(picojson_download.cmake picojson-download/CMakeLists.txt)
EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" . WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/picojson-download)
EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} --build . WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/picojson-download)
ADD_SUBDIRECTORY(${CMAKE_BINARY_DIR}/picojson-src ${CMAKE_BINARY_DIR}/picojson_download)

EXECUTE_PROCESS(COMMAND cp sample.lua ${CMAKE_BINARY_DIR} WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})

ADD_EXECUTABLE(readonlytable
  ReadOnlyTable.cpp
)

TARGET_LINK_LIBRARIES(readonlytable
  picojson
  lua5.3
)

